projeto app orcamento 1.0

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "orcamento",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "Meu Orçamento",
+  "version": "0.0.2",
+  "author": "ELi Felipe",
+  "homepage": "https://elifelipe.com.br/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -13,21 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
+    "@angular/animations": "^19.2.8",
+    "@angular/cdk": "^19.2.14",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
+    "@angular/material": "^19.2.14",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@capacitor-community/admob": "^6.2.0",
+    "@capacitor-community/file-opener": "^7.0.1",
+    "@capacitor/android": "7.2.0",
     "@capacitor/app": "7.0.1",
-    "@capacitor/core": "7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/dialog": "^7.0.1",
+    "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.5.5",
+    "@ionic/core": "^8.5.5",
     "ionicons": "^7.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -42,9 +53,10 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
-    "@capacitor/cli": "7.2.0",
+    "@capacitor/cli": "^7.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.15.3",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
@@ -60,5 +72,5 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.6.3"
   },
-  "description": "An Ionic project"
+  "description": "O aplicativo de orçamento para clientes facilita a criação, envio e gerenciamento de orçamentos de forma rápida e prática. Com ele, empresas podem gerar propostas personalizadas, acompanhar aprovações em tempo real e manter um histórico organizado de negociações, proporcionando mais agilidade e profissionalismo no atendimento ao cliente."
 }
